--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
   "name": "http2-request",
   "version": "1.0.0",
-  "description": "tiny package to work with http2 requests",
+  "description": "smol package to work with http2 requests",
   "main": "index.js",
   "scripts": {
     "test": "standard"
   },
   "keywords": [
     "http2",
-    "request"
+    "request",
+    "nodejs",
+    "node",
+    "http2session"
   ],
   "author": "Irina Shestak",
   "license": "Apache-2.0",
