--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "node",
     "http2session"
   ],
+  "repository": "lrlna/http2-request",
   "author": "Irina Shestak",
   "license": "Apache-2.0",
   "devDependencies": {
